# homesite

./: .eslintrc.json  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  backend.py  pyproject.toml  settings.py  urls.py  wsgi.py
base/: daemons.py  urls.py  views.py
base/templates/: 404.html  500.html  base.html  common.html  login.html
base/templates/base/: ark.html  info.html  monitoring.html  munin.html  storage.html
base/templates/registration/: login.html
deployment/: homesite.service  nginx.conf  setup.sh  uwsgi.ini
deployment/static/: file_browser  homesite  monitoring
docker/: prepare.sh
homesite/: backend.py  manage.py  settings.py  urls.py  wsgi.py
homesite/base/: daemons.py  urls.py  views.py
homesite/base/templates/: 500.html  base.html  common.html
homesite/base/templates/base/: info.html  monitoring.html  munin.html  storage.html
homesite/scripts/: control.py  homesite.service  manage.py  nginx.conf  uwsgi.ini
homesite/static/homesite/: jsu  odm
homesite/static/homesite/css/: base.css
main/: admin.py  context_processors.py  models.py  views.py  views_munin.py
main/templates/: ark.html  base.html  common.html  login.html  munin.html
scripts/: ark_server.py  control.py  dump.sh  init-script.conf  init.d.sh  nginx.conf  update.sh  uwsgi.ini  uwsgi.sh
served/static/js/: clock.js
static/css/: base.css  table.css
static/fa/: font-awesome.min.css
static/homesite/: jsu  odm
static/homesite/css/: base.css
